--- a/src/App.css
+++ b/src/App.css
@@ -155,7 +155,7 @@
 }
 .hover-link:hover {
   color: #00ff00!important;
-  background-color: rgb(255,255,255,0.08)!important;
+  background-color: transparent!important;
 }
 
 .panel {
